--- a/admin/static/assets/css/style.css
+++ b/admin/static/assets/css/style.css
@@ -1,14 +1,4 @@
-/**
-* Template Name: NiceAdmin
-* Updated: Jan 09 2024 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 :root {
   scroll-behavior: smooth;
 }
@@ -1295,3 +1285,6 @@ h6 {
   color: #012970;
 }
 
+/* #single-property-price {
+  padding: 90px;
+} */
