--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                       <br> Olive Road Two
                     </h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | $ 132.000</span></a>
+                      <a href="#"><span class="price-a">rent | $ 13,000</span></a>
                     </p>
                   </div>
                 </div>
@@ -53,7 +53,7 @@
                       <br> Venda Road Five
                     </h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | $ 12.000</span></a>
+                      <a href="#"><span class="price-a">rent | $ 12,000</span></a>
                     </p>
                   </div>
                 </div>
@@ -79,7 +79,7 @@
                       <br> Roan Road One
                     </h1>
                     <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | $ 12.000</span></a>
+                      <a href="#"><span class="price-a">rent | $ 12,000</span></a>
                     </p>
                   </div>
                 </div>
@@ -412,7 +412,7 @@
                 <h2 class="title-a">Best Agents</h2>
               </div>
               <div class="title-link">
-                <a href="agents-grid.html">All Agents
+                <a href="{{ url_for('agent') }}">All Agents
                   <span class="bi bi-chevron-right"></span>
                 </a>
               </div>
@@ -429,7 +429,7 @@
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="agent-single.html" class="link-two">Margaret Sotillo
+                      <a href="{{ url_for('view_agent') }}" class="link-two">Margaret Sotillo
                         <br> Escala</a>
                     </h3>
                   </div>
@@ -485,7 +485,7 @@
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="agent-single.html" class="link-two">Stiven Spilver
+                      <a href="{{ url_for('view_agent') }}" class="link-two">Stiven Spilver
                         <br> Darw</a>
                     </h3>
                   </div>
@@ -541,7 +541,7 @@
                 <div class="card-header-d">
                   <div class="card-title-d align-self-center">
                     <h3 class="title-d">
-                      <a href="agent-single.html" class="link-two">Emma Toledo
+                      <a href="{{ url_for('view_agent') }}" class="link-two">Emma Toledo
                         <br> Cascada</a>
                     </h3>
                   </div>
