--- a/templates/rent-grid.html
+++ b/templates/rent-grid.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Buy{% endblock %}
+{% block title %}Rent{% endblock %}
+
 
 {% block content %}
   <main id="main">
@@ -10,7 +11,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">Available Properties</h1>
+              <h1 class="title-single">Available For Rent</h1>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -19,8 +20,8 @@
                 <li class="breadcrumb-item">
                   <a href="{{ url_for('home') }}">Home</a>
                 </li>
-                <li class="breadcrumb-item active" aria-curFor Sale="page">
-                  Buy
+                <li class="breadcrumb-item active" aria-current="page">
+                  Rent
                 </li>
               </ol>
             </nav>
@@ -29,7 +30,7 @@
       </div>
     </section><!-- End Intro Single-->
 
-    <!-- ======= Property Grid ======= -->
+    <!-- ======= Property Grid =======  -->
     <section class="property-grid grid">
       <div class="container">
         <div class="row">
@@ -56,7 +57,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a">For Sale | {{ property.price }}</span>
+                      <span class="price-a">For Rent | {{ property.price }}</span>
                     </div>
                     <a href="{{ url_for('view_property', property_id=property_id) }}" class="link-a">Click here to view
                       <span class="bi bi-chevron-right"></span>
@@ -122,7 +123,8 @@
       </div>
     </section><!-- End Property Grid Single-->
 
+
   </main><!-- End #main -->
 
 {% endblock %}
-{% set active_page = 'property' %}
+{% set active_page = 'rent' %}
