--- a/templates/agents-grid.html
+++ b/templates/agents-grid.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{% endblock %}
+{% block title %}Agents{% endblock %}
 
 {% block content %}
   <main id="main">
@@ -20,7 +20,7 @@
                   <a href="{{ url_for('home') }}">Home</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
-                  Agents Grid
+                  Agents
                 </li>
               </ol>
             </nav>
@@ -379,15 +379,12 @@
                     <span class="bi bi-chevron-left"></span>
                   </a>
                 </li>
-                <li class="page-item">
-                  <a class="page-link" href="#">1</a>
+                {% set active_page = 1 %}
+                {% for page_num in range(1, 3) %}
+                <li class="page-item {% if active_page == page_num %}active{% endif %}">
+                  <a class="page-link" href="#">{{ page_num }}</a>
                 </li>
-                <li class="page-item active">
-                  <a class="page-link" href="#">2</a>
-                </li>
-                <li class="page-item">
-                  <a class="page-link" href="#">3</a>
-                </li>
+                {% endfor %}
                 <li class="page-item next">
                   <a class="page-link" href="#">
                     <span class="bi bi-chevron-right"></span>
@@ -402,3 +399,4 @@
 
   </main><!-- End #main -->
 {% endblock %}
+{% set active_page = 'agent' %}
