--- a/templates/property-grid.html
+++ b/templates/property-grid.html
@@ -101,15 +101,12 @@
                     <span class="bi bi-chevron-left"></span>
                   </a>
                 </li>
-                <li class="page-item">
-                  <a class="page-link" href="#">1</a>
+                {% set active_page = 1 %}
+                {% for page_num in range(1, 4) %}
+                <li class="page-item {% if active_page == page_num %}active{% endif %}">
+                  <a class="page-link" href="#">{{ page_num }}</a>
                 </li>
-                <li class="page-item active">
-                  <a class="page-link" href="#">2</a>
-                </li>
-                <li class="page-item">
-                  <a class="page-link" href="#">3</a>
-                </li>
+                {% endfor %}
                 <li class="page-item next">
                   <a class="page-link" href="#">
                     <span class="bi bi-chevron-right"></span>
