added a database file and models file

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
                 <h2 class="title-a">Latest Properties</h2>
               </div>
               <div class="title-link">
-                <a href="property-grid.html">All Property
+                <a href="{{ url_for('property') }}">All Property
                   <span class="bi bi-chevron-right"></span>
                 </a>
               </div>
@@ -167,7 +167,7 @@
                       <div class="card-overlay-a-content">
                         <div class="card-header-a">
                           <h2 class="card-title-a">
-                            <a href="property-single.html">NO 4 Newwton
+                            <a href="#">NO 4 Newwton
                               <br /> Olive Road Two</a>
                           </h2>
                         </div>
@@ -438,12 +438,12 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="blog-single.html">House is comming
+                        <a href="#">House is comming
                           <br> new</a>
                       </h2>
                     </div>
                     <div class="card-date">
-                      <span class="date-b">18 Sep. 2017</span>
+                      <span class="date-b">18 Feb. 2024</span>
                     </div>
                   </div>
                 </div>
@@ -462,7 +462,7 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="blog-single.html">Travel is comming
+                        <a href="#">Travel is comming
                           <br> new</a>
                       </h2>
                     </div>
@@ -486,7 +486,7 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="blog-single.html">Park is comming
+                        <a href="#">Park is comming
                           <br> new</a>
                       </h2>
                     </div>
