--- a/templates/property-grid.html
+++ b/templates/property-grid.html
@@ -48,7 +48,7 @@
                 <div class="card-overlay-a-content">
                   <div class="card-header-a">
                     <h2 class="card-title-a">
-                      <a href="#">204 Mount
+                      <a href="{{ url_for('view_property', property_id=property_id) }}">204 Mount
                         
                         <br /> {{ property.address }}</a>
                         
