--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -20,12 +20,10 @@
                 <li class="breadcrumb-item">
                   <a href="{{ url_for('home') }}">Home</a>
                 </li>
-                <li class="breadcrumb-item">
+                <li class="breadcrumb-item active">
                   <a href="{{ url_for(route) }}">{{ source }}</a>
                 </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                  304 Blaster Up
-                </li>
+  
               </ol>
             </nav>
           </div>
@@ -169,7 +167,7 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link" id="pills-map-tab" data-bs-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map" aria-selected="false">Ubication</a>
+                <a class="nav-link" id="pills-map-tab" data-bs-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map" aria-selected="false">Location</a>
               </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
