--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -40,11 +40,11 @@
             <div id="property-single-carousel" class="swiper">
               <div class="swiper-wrapper">
                 <div class="carousel-item-b swiper-slide">
-                  <img src="{{ url_for('static', filename='assets/img/' + property_data.image + '.jpg') }}" alt="Property Image">
+                  <img src="{{ url_for('static', filename=image_path) }}" alt="{{ image.name }}"> 
                   
                 </div>
                 <div class="carousel-item-b swiper-slide">
-                  <img src="{{ url_for('static', filename='assets/img/slide-2.jpg') }}" alt="">
+                  <img src="{{ url_for('static', filename=image.image_path) }}" alt="">
                 </div>
               </div>
             </div>
@@ -79,7 +79,7 @@
                     <ul class="list">
                       <li class="d-flex justify-content-between">
                         <strong>Property ID:</strong>
-                        <span>{{ property_data.id + 340}}</span>
+                        <span>{{ property_data.id }}</span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Location:</strong>
@@ -87,7 +87,7 @@
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Property Type:</strong>
-                        <span>House</span>
+                        <span>{{ property_data.property_type }}</span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Status:</strong>
@@ -175,7 +175,9 @@
                 <iframe src="https://player.vimeo.com/video/73221098" width="100%" height="460" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
               </div>
               <div class="tab-pane fade" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
-                <img src="{{ url_for('static', filename='assets/img/plan2.jpg ') }}"alt="" class="img-fluid">
+                {% for image in images %}
+                   <li><img src="{{ image.image_path }}" alt="{{ image.name }}" style="max-width: 300px;"></li>
+                {% endfor %}alt="" class="img-fluid">
               </div>
               <div class="tab-pane fade" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834" width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
