added the delete feature for propreties in the admin page

--- a/templates/index.html
+++ b/templates/index.html
@@ -173,7 +173,7 @@
                         </div>
                         <div class="card-body-a">
                           <div class="price-box d-flex">
-                            <span class="price-a">{{ item.status }} | {{ item.price }}</span>
+                            <span class="price-a">For {{ item.status }} | {{ item.price }}</span>
                           </div>
                           <a href="{{ url_for('view_property', property_id=id) }}" class="link-a">Click here to view
                             <span class="bi bi-chevron-right"></span>
