--- a/templates/add_property.html
+++ b/templates/add_property.html
@@ -12,20 +12,27 @@
 <body>
 <div class="container">
 <h2>Add Property</h2>
-    <div class="row">
-        <div class="col-lg-12">
-            <p>
-                {% with messages = get_flashed_messages() %}
-                  {% if messages %}
-                 {% for message in messages %}
-                   <div class="alert alert-success">
-                    <strong>{{ message }}</strong>
-                  </div>
-                 {% endfor %}
-                  {% endif %}
-                {% endwith %}
-               </p>
-  <div>
+   <div class="row">
+    <div class="col-lg-12">
+        <p>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-success" id="flash-message">
+                            <strong>{{ message }}</strong>
+                        </div>
+                        <script>
+                            setTimeout(function() {
+                                document.getElementById("flash-message").style.display = "none";
+                            }, 2000);
+                        </script>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </p>
+    </div>
+</div>
+
    <!-- File upload form -->
    <form method="POST" action="/property-upload" enctype="multipart/form-data" class="form-inline">
     <div class="form-group">
@@ -38,15 +45,30 @@
                  <input type="text" name="name" required><br>
          
                  <label for="price">Price:</label>
-                 <input type="number" name="price" required><br>
+
+
+                <input type="text"  name="price" oninput="addCommas(this)">
+
+                <script>
+                function addCommas(input) {
+                    // Remove existing commas and non-numeric characters
+                    const cleanedValue = input.value.replace(/[^\d]/g, '');
+
+                    // Add commas to the cleaned value
+                    const formattedValue = Number(cleanedValue).toLocaleString();
+
+                    // Update the input field with the formatted value
+                    input.value = formattedValue;
+                }
+                </script>
          
                  <label for="address">Address:</label>
                  <input type="text" name="address" required><br>
          
                  <label for="status">Status:</label>
                  <select name="status" required>
-                     <option value="available">For Sale</option>
-                     <option value="sold">For Rent</option>
+                     <option value="For Sale">For Sale</option>
+                     <option value="For Rent">For Rent</option>
                  </select><br>
          
                  <label for="area">Area:</label>
