Implemented picture upload conditions and resize feature

--- a/templates/about.html
+++ b/templates/about.html
@@ -40,8 +40,7 @@
             <div class="sinse-box">
               <h3 class="sinse-title">WalterProperties
                 <span></span>
-                <br> Since 2013
-              </h3>
+                <br> Since 2009              </h3>
               <p>Art & Creative</p>
             </div>
           </div>
