--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -10,7 +10,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">304 Blaster Up</h1>
+              <h1 class="title-single">{{ property_data.name }}</h1>
               <span class="color-text-a">{{ property_data.address }}</span>
             </div>
           </div>
@@ -39,13 +39,17 @@
           <div class="col-lg-8">
             <div id="property-single-carousel" class="swiper">
               <div class="swiper-wrapper">
-                {% for path in image_path %}
-                <div class="carousel-item-b swiper-slide">
-                  
-                  <img src="{{ url_for('static', filename=path) }}" alt="{{ image.name }}"> 
-                  
-                </div>
-                {% endfor %}
+                {% if image_path %}
+                  {% for path in image_path %}
+                  <div class="carousel-item-b swiper-slide">
+                    
+                    <img src="{{ url_for('static', filename=path) }}" alt="{{ image.name }}" style="max-width: 100%; height: auto;"> 
+                    
+                  </div>
+                  {% endfor %}
+                {% else %}
+                  <h1> No image found</h1>
+                {% endif %}
               </div>
             </div>
             <div class="property-single-carousel-pagination carousel-pagination"></div>
